# mini-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
mini_agent/: __init__.py  agent.py  compact.py  example.py  loop.py  session.py  types.py
mini_agent/providers/: __init__.py  anthropic.py
mini_agent/tools/: __init__.py  base.py  bash.py  edit.py  read.py  write.py
tests/: conftest.py  test_loop.py  test_session.py  test_tools.py
